...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/configure_activity_edit_text_subject"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconContentDescription="buttonEndIconContributor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Sujet ..."
...
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/configure_activity_edit_text_contributor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Participants ..."
                app:endIconContentDescription="edit_text_contributor"
                app:endIconDrawable="@drawable/ic_person_add_black_24dp"
                app:endIconMode="custom"
                app:startIconDrawable="@drawable/ic_contact_mail_blue_24dp"
                app:startIconTint="@color/colorPrimary"
                >

...
                android:layout_margin="10dp"
                app:endIconMode="dropdown_menu"
                app:startIconDrawable="@drawable/ic_place_black_24dp"
                app:startIconTint="@color/colorPrimary">

                <AutoCompleteTextView
                    android:id="@+id/configure_activity_spinner_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Local ..."
                    android:editable="false"
                    />

...
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Heure de la réunion"
                android:drawableStart="@drawable/ic_access_time_blue_24dp"/>
            <Button
                android:id="@+id/configure_activity_button_set_start_clock"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="définir l'heure de début" />

            <Button
                android:id="@+id/configure_activity_button_set_end_clock"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_with_border"
                android:text="définir l'heure de fin" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>
            <Button
                android:id="@+id/configure_activity_edit_text_valid_meeting"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryDark"
                android:text="AJOUTER"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
