<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_filter_menu_activity_main"
        android:icon="@drawable/ic_filter_list_white_48dp"
        android:orderInCategory="2"
        android:title="filter"
        app:showAsAction="always|withText">

        <menu>

            <group>
                <item
                    android:checkable="false"
                    android:enabled="false"
                    android:title="Filtre les réunions en fonction du local et de l'heure"/>

                <item
                    android:id="@+id/option_1_filter"
                    android:icon="@drawable/ic_access_time_blue_24dp"
                    android:title="Par heure">

                    <menu>

                        <group
                            android:id="@+id/option_filter_1_group"
                            android:checkableBehavior="all">

                        </group>
                    </menu>
                </item>
                <item
                    android:id="@+id/option_2_filter"
                    android:icon="@drawable/ic_place_black_24dp"
                    android:title="Par local">

                    <menu>

                        <group
                            android:id="@+id/option_filter_2_group"
                            android:checkableBehavior="all">
                        </group>
                    </menu>
                </item>
            </group>
        </menu>
    </item>
</menu>